# crossmint-megaverse

./: .env.example  Cargo.toml  README.md
src/: lib.rs  main.rs
src/object_type/: mod.rs
