[package]
name = "crossmint-megaverse"
version = "0.1.0"
authors = ["Miquel A. Cabot <miquel.cabot@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "megaverse"
path = "src/lib.rs"

[dependencies]
dialoguer = "0.11.0"
dotenv = "0.15.0"
figlet-rs = "0.1.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
